<resources>
    <string name="app_name">HackensackUMC Mobile Access</string>
    <string name="title_activity_hackensack_umc">HackensackUMC</string>
    <string name="title_activity_login">Login or Register</string>
    <string name="title_activity_doctor_search">Doctor Search</string>
    <string name="title_activity_doctor_result">Results</string>
    <string name="title_activity_doctor_filter">Filter</string>
    <string name="title_activity_symptom_checker">Symptom Checker</string>
    <string name="title_activity_doctor_detail">Doctor Details</string>
    <string name="title_activity_direction_maps">Map</string>
    <string name="title_activity_symptom_list">Symptom List</string>
    <string name="title_activity_favourite">My Doctors</string>
    <string name="title_activity_direction_list">Destinations</string>
    <string name="title_activity_Edit">Edit</string>
    <string name="title_activity_question">Verify</string>
    <string name="title_activity_appointment_summery">Appointment Summary</string>
    <string name="title_activity_view_appointment">Appointments</string>
    <string name="title_activity_doctor_schedule_appointment">Schedule Appointment</string>
    <string name="title_activity_consent_search">Consent</string>
    <string name="login_button_text">LOGIN</string>
    <string name="create_cred_text">Create Credentials</string>
    <string name="crete_cred_info_text">Existing patient, need to create credentials?</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="register_patient_button_text">REGISTER AS NEW PATIENT</string>
    <string name="register_new_dependant_btn_text">REGISTER NEW DEPENDENT</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to HackensackUMC</string>
    <string name="loading_text">Loading...</string>
    <string-array name="menuitem_mychart_array">
        <item>Make Appointment</item>
        <item>My Appointments</item>
        <item>Doctor Search</item>
        <item>Symptom Checker</item>
        <item>Directions</item>
        <item>Test Results</item>
        <item>Health Reminders</item>
        <item>Messages</item>
        <item>Medication</item>
        <item>Health Summary</item>
        
        <item>Share Records</item>
        

        <item>Billing</item>
    </string-array>
    <string name="guide_text">You can log in using your MyChart username and password</string>
    <string name="appt_login_guide_text">You can log in using your MyChart login or Register as new patient to make this appointment</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username/Email</string>
    <string name="guest_login_text">PROCEED AS GUEST</string>
    <string name="copy_right">Copyright\u00a9 2016</string>
    <string name="doctor_search_text">Provide at least one input criteria</string>
    <string name="firstname_text">First Name</string>
    <string name="lastname_text">Last Name</string>
    <string name="search_doctor_text">Search Doctor</string>
    <string name="filter_search_text">Filter Search</string>
    <string name="reset_text">Reset data</string>
    <string name="zip_code">Zip Code</string>
    <string name="search_with_in_text">Search within</string>
    <string name="gender">Gender</string>
    <string name="location_text">Location</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="child">CHILD</string>
    <string name="find_doctor">Find Doctors</string>
    <string name="complaints">Complaints</string>
    <string name="suggested_specialties">Suggested Specialties</string>
    <string name="my_doctor">My Doctors</string>
    <string name="favorite">FAVORITE</string>
    <string name="call">CALL</string>
    <string name="directions">DIRECTION</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_no">NO</string>
    <string name="button_yes">YES</string>
    <string name="normalBtn">Map</string>
    <string name="hybridBtn">Hybrid</string>
    <string name="sateliteBtn">Satellite</string>
    <string name="currLoc">Current Location</string>
    <string name="homeAddr">Home Address</string>
    <string name="workAddr">Work Address</string>
    <string name="otherAddr">Other Address</string>
    <string name="cancel">Cancel</string>
    <string name="home_add">Home Address</string>
    <string name="work_add">Work Address</string>
    <string name="other_add">Other Address</string>
    <string name="curr_loc">Current Location</string>
    <string name="hacensack_addr">HackensackUMC</string>
    <string name="title_activity_news">HackensackUMC News</string>
    <string name="title_activity_about">About HackensackUMC</string>
    <string name="edit_str">Edit</string>
    <string name="alert_title">Alert</string>
    <string name="remove_fav_title">Favorite Doctor</string>
    <string name="fav_empty_text">Favorite doctor not added.</string>
    <string name="remove_fav_msg_first">Are you sure you want to remove</string>
    <string name="remove_fav_msg_second">from Favorite list?</string>
    <string name="profile_dl_str">Picture of Driver\'s License:</string>
    <string name="profile_ic_str">Picture of Insurance Card:</string>
    <string name="profile_selfie_str">Selfie:</string>
    <string name="profile_manual_btn_str">Skip to Manual Input</string>
    <string name="profile_proceed_btn_str">Proceed</string>
    <string name="title_activity_registration_details">Registration details</string>
    <string name="reg_tv_str">Please confirm information and edit if needed</string>
    <string name="reg_fname_str">First Name</string>
    <string name="reg_lname_str">Last Name</string>
    <string name="reg_dob_str">Date of Birth</string>
    <string name="reg_email_str">Email Id</string>
    <string name="reg_license_str">License</string>
    <string name="reg_addr_hint_str">Address</string>
    <string name="reg_cell_hint_str">Cell</string>
    <string name="reg_add_phone_str">ADD PHONE</string>
    <string name="required_str">Required</string>
    <string name="optional_str">Optional</string>
    <string name="enter_str">Enter</string>
    <string name="select_str">Select</string>
    <string name="mobile_str">Cell</string>
    <string name="home_str">Home</string>
    <string name="work_str">Work</string>
    <string name="reg_ins_info_str">Insurance Info</string>
    <string name="plan_prov_hint_str">Plan Provider</string>
    <string name="grp_name_hint_str">Group Name</string>
    <string name="grp_no_hint_str">Group Number</string>
    <string name="coverage_hint_str">Coverage</string>
    <string name="plan_type_hint_str">Plan Type</string>
    <string name="title_activity_insurance_info">Enter Insurance Info</string>
    <string name="title_activity_address">Enter Address</string>
    <string name="addr_street1">Street 1</string>
    <string name="addr_street2">Street 2</string>
    <string name="addr_city">City</string>
    <string name="addr_state">State</string>
    <string name="addr_zip">Zip Code</string>
    <string name="addr_country">Country</string>
    <string name="insurance_img_label">Photograph Insurance Card</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="ans_correct">You have answered at least 2 of the 3 questions correctly, Registration is accepted.</string>
    <string name="subscriberId_str">Subscriber Id</string>
    <string name="reference_str">Reference</string>
    <string name="title_activity_create_password">Create Password</string>
    <string name="first_available_time_text">First available time</string>
    <string name="more_available_time_text">more time slots</string>
    <string name="select_office_time_text">Select an office to see time slots</string>
    <string name="select_time_slot_text">Select time slot to book appointment</string>
    <string name="search_result">Type to search</string>
    <string name="first_name_hint">Enter</string>
    <string name="last_name_hint">Enter</string>
    <string name="create_your_password">Create your password</string>
    <string name="create_your_password_for_gaurdian">Create your password (for Gaurdian)</string>
    <string name="create_password_note"><![CDATA[Note: This can be used to login to HackensackUMC App & My Chart App]]></string>
    <string name="account_info">Account info</string>
    <string name="personal_info">Personal info</string>
    <string name="password_info">Password</string>
    <string name="create_password_validation">Password should be at least 8 characters long and it should be a combination of alphabets, numbers and special characters</string>
    <string name="verify_password">Verify password</string>
    <string name="enter_password">Enter password</string>
    <string name="member_number">Member Number</string>
    <string name="subscribername">Subscriber Name</string>
    <string name="subscriber_birthDate">Subscriber Date of Birth</string>
    <string name="msg_enter_plan_provider">Invalid plan provider</string>
    <string name="success">Success</string>
    <string name="msg_enter_valid_password">Minimum security requirement for password is not met</string>
    <string name="msg_enter_valid_acc_info">Enter valid Account information</string>
    <string name="msg_enter_password_not_matching">Password you entered do not match</string>
    <string name="mile_str">miles away</string>
    <string name="appointment_text">You\'re about to make this appointment as new patient visit</string>
    <string name="change_appointment_text">Change Appointment</string>
    <string name="make_appointment_text">Make my Appointment</string>
    <string name="login_registration_text">You can log in using your MyChart login or Register as new patient to make this appointment</string>
    <string name="enter_zip_code">Please enter your Zip Code</string>
    <string name="msg_zip_code">Invalid zip code</string>
    <string name="only_five_digits">Please enter 5 digit zip code, Click on close to enter manually.</string>
    <string name="msg_user_alredy_registered">You are already registered user please Create Credentials.</string>
    <string name="msg_user_alredy_registered_new">You are already registered user. Please check your information.</string>
    <string name="validation_result">Your answers were incorrect.Please check all information and submit again.</string>
    <string name="done">Done</string>
    <string name="validating">Validating...</string>
    <string name="sending_ans">Sending answers...</string>
    <string name="registration_progress">Registration is in progress...</string>
    <string name="creating_mychart">Creating mychart login...</string>
    <string name="fail">FAIL</string>
    <string name="pass">Pass</string>
    <string name="scanning_images">Scanning cards...</string>
    <string name="title_activity_view_profile">View Profile</string>
    <string name="medical_record_num_str">Medical Record Number</string>
    <string name="username_str">Username</string>
    <string name="goto_form_btn">Go to Form Page</string>
    <string name="add_info_btn">Get additional information</string>
    <string name="proxy_form_title">Proxy Access Form Required\n</string>
    <string name="proxy_form_content">You have created a MyChart Account Login\nfor yourself and registered your dependant\nwith the hospital for an appointment.\n\n
     However, your dependant\'s account is not\nyet linked to this MyChart Login and this app.\n\n You must submit an HUMC MyChart Child\n
    or Adult Proxy Form before hospital will\nlink your account\n\nFrom your browser go to:\n</string>
    <string name="proxy_form_link">https://mychart.humed.com/MyChart/default.asp?mode=stdfile&amp;option=CustomForm2</string>
    <string name="proxy_form_content_1">\nto download a form to be faxed or emailed</string>
</resources>