<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/proxy_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/proxy_form_title"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/proxy_access_content"
            android:layout_below="@+id/proxy_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/proxy_form_content"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/proxy_access_link"
            android:layout_below="@+id/proxy_access_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/proxy_form_link"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/proxy_access_content1"
            android:layout_below="@+id/proxy_access_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/proxy_form_content_1"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <Button
            android:id="@+id/goto_form_button"
            android:layout_below="@+id/proxy_access_content1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding15"
            android:background="@color/profile_proceed_green"
            android:text="@string/goto_form_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/padding15"
            android:textStyle="bold" />
        <Button
            android:id="@+id/add_info_btn"
            android:layout_below="@+id/goto_form_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding5"
            android:background="@color/profile_proceed_green"
            android:text="@string/add_info_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/padding15"
            android:textStyle="bold" />
        <Button
            android:id="@+id/done_info_btn"
            android:layout_below="@+id/add_info_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding5"
            android:background="@color/profile_proceed_green"
            android:text="@string/done"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/padding15"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>
