<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.hackensack.umc.activity.CreatePasswordActivity">

    <ScrollView
        android:id="@+id/reg_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center"
                android:paddingBottom="@dimen/padding10"
                android:text="@string/create_password_note" />

            <TextView
                android:id="@+id/acc_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="left"
                android:paddingBottom="@dimen/padding10"
                android:text="@string/account_info" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding10"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="4dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/padding10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:text="@string/username_str"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/txt_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:singleLine="true"
                        android:hint="@string/required_str"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/medical_record_num_str"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/txt_MRN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:singleLine="true"
                        android:hint="@string/required_str"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/personal_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="left" android:visibility="gone"
                android:paddingBottom="@dimen/padding10"
                android:text="@string/personal_info" />

            <android.support.v7.widget.CardView
                android:id="@+id/create_cred_extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding10"
                android:visibility="gone"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:text="@string/reg_fname_str"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <EditText
                            android:id="@+id/create_cred_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/required_str"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/profile_manual_grey" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding10"
                        android:layout_marginRight="@dimen/padding10"
                        android:layout_marginTop="@dimen/padding10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/reg_lname_str"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <EditText
                            android:id="@+id/create_cred_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/required_str"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/profile_manual_grey" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gen_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding10"
                        android:layout_marginRight="@dimen/padding10"
                        android:layout_marginTop="@dimen/padding10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/gender"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <EditText
                            android:id="@+id/create_cred_gender_edt"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="bottom"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/spinner_arrow"
                            android:focusableInTouchMode="false"
                            android:hint="@string/select_str"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textColorHint="@color/profile_manual_grey" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/create_cred_date_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding10"
                        android:layout_marginRight="@dimen/padding10"
                        android:layout_marginTop="@dimen/padding15"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/reg_dob_str"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/dob_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/calendar_icon"
                            android:hint="@string/select_str"
                            android:paddingBottom="2dp"
                            android:paddingLeft="4dp"
                            android:paddingTop="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textColorHint="@color/profile_manual_grey" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="@dimen/padding10"
                        android:background="@color/profile_manual_grey" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/password_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="left"
                android:paddingBottom="@dimen/padding10"
                android:text="@string/password_info" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding10"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="4dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    >

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/create_your_password"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:hint="@string/enter_password"
                        android:password="true"
                        android:singleLine="true" />


                    <EditText
                        android:id="@+id/edtVerifyPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/verify_password"
                        android:password="true"
                        android:singleLine="true" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding10"
                android:text="@string/create_password_validation" />


            <!-- <Button
                 android:id="@+id/btnGetMRN"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="@dimen/margin_medium"
                 android:layout_marginRight="@dimen/margin_medium"
                 android:layout_marginTop="@dimen/margin_small"
                 android:background="@color/profile_manual_grey"
                 android:text="@string/getMRN"
                 android:textColor="@color/white"
                 android:visibility="gone"/>-->
        </LinearLayout>


    </ScrollView>


</LinearLayout>
